kubernetes/anonaddy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anonaddy
  labels:
    app: anonaddy
